[package]
name = "aether_implant"
version = "11.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Networking_WinHttp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
] }
obfstr = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aead = "0.5"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["std"] }